@@ -7,3 +7,4 @@
 ## Bugfixes
 
 - fix bug where notifying log model wouldn't add logs based on error level, and disable song fetching if we're offline -- kaneryu on 2025-09-08
+- bug where incorrect offline check led to infinite recursion -- kaneryu on 2025-09-09
